# peeky

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README.zh.md  capture.html  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: capture-main.ts  capture.css  main.ts  markdown.ts  mascot.css  mascot.ts  settings-main.ts  settings.css  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: copilot.md  nerd.md  quick_ask.md  quick_explain.md  quick_translate.md  roast.md
src-tauri/src/: agent.rs  api.rs  capture.rs  commands.rs  error.rs  lib.rs  main.rs  memory.rs  modes.rs  permission.rs  restraint.rs  settings.rs  state.rs  tools.rs  trigger.rs  types.rs
src-tauri/src/platform/: mod.rs  skip_apps.rs
src-tauri/src/platform/clipboard/: macos.rs  mod.rs  windows.rs
src-tauri/src/platform/system/: mod.rs
src-tauri/src/platform/trigger/: macos.rs  mod.rs  windows.rs
src/i18n/: en.json  index.ts  ja.json  zh.json
